solution after changes request by mentor v2.0